assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 110 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: ε
    8             | feature_list feature

    9 feature: OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | error ';'

   13 formal_list: ε
   14            | formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 case_list: ε
   18          | case_list case

   19 case: OBJECTID ':' TYPEID DARROW expression ';'
   20     | error ';'

   21 let_expr: OBJECTID ':' TYPEID IN expression
   22         | OBJECTID ':' TYPEID ASSIGN expression IN expression
   23         | OBJECTID ':' TYPEID ',' let_expr
   24         | OBJECTID ':' TYPEID ASSIGN expression ',' let_expr
   25         | error IN expression

   26 expression_list: expression ';'
   27                | expression_list expression ';'
   28                | error ';'

   29 arg_list: ε
   30         | expression arg_list_2

   31 arg_list_2: ε
   32           | ',' expression arg_list_2

   33 expression: NEW TYPEID
   34           | ISVOID expression
   35           | expression '+' expression
   36           | expression '-' expression
   37           | expression '*' expression
   38           | expression '/' expression
   39           | expression '<' expression
   40           | expression LE expression
   41           | expression '=' expression
   42           | OBJECTID ASSIGN expression
   43           | expression '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression '.' OBJECTID '(' arg_list ')'
   45           | OBJECTID '(' arg_list ')'
   46           | IF expression THEN expression ELSE expression FI
   47           | IF error FI
   48           | CASE expression OF case_list ESAC
   49           | CASE error ESAC
   50           | WHILE expression LOOP expression POOL
   51           | WHILE error POOL
   52           | '{' expression_list '}'
   53           | LET let_expr
   54           | '~' expression
   55           | NOT expression
   56           | '(' expression ')'
   57           | OBJECTID
   58           | INT_CONST
   59           | BOOL_CONST
   60           | STR_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 43 44 45 56
    ')' (41) 11 43 44 45 56
    '*' (42) 37
    '+' (43) 35
    ',' (44) 15 23 24 32
    '-' (45) 36
    '.' (46) 43 44
    '/' (47) 38
    ':' (58) 9 10 11 16 19 21 22 23 24
    ';' (59) 4 5 6 9 10 11 12 19 20 26 27 28
    '<' (60) 39
    '=' (61) 41
    '@' (64) 43
    '{' (123) 4 5 11 52
    '}' (125) 4 5 11 52
    '~' (126) 54
    error (256) 6 12 20 25 28 47 49 51
    CLASS (258) 4 5
    ELSE (259) 46
    FI (260) 46 47
    IF (261) 46 47
    IN (262) 21 22 25
    INHERITS (263) 5
    LET (264) 53
    LOOP (265) 50
    POOL (266) 50 51
    THEN (267) 46
    WHILE (268) 50 51
    CASE (269) 48 49
    ESAC (270) 48 49
    OF (271) 48
    DARROW (272) 19
    NEW (273) 33
    ISVOID (274) 34
    STR_CONST <symbol> (275) 60
    INT_CONST <symbol> (276) 58
    BOOL_CONST <boolean> (277) 59
    TYPEID <symbol> (278) 4 5 9 10 11 16 19 21 22 23 24 33 43
    OBJECTID <symbol> (279) 9 10 11 16 19 21 22 23 24 42 43 44 45 57
    ASSIGN (280) 10 22 24 42
    NOT (281) 55
    LE (282) 40
    ERROR (283)
    LET_EXPR_PREC (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (50)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (51)
        on left: 9 10 11 12
        on right: 8
    formal_list <formals> (52)
        on left: 13 14 15
        on right: 11 15
    formal <formal> (53)
        on left: 16
        on right: 14 15
    case_list <cases> (54)
        on left: 17 18
        on right: 18 48
    case <case_> (55)
        on left: 19 20
        on right: 18
    let_expr <expression> (56)
        on left: 21 22 23 24 25
        on right: 23 24 53
    expression_list <expressions> (57)
        on left: 26 27 28
        on right: 27 52
    arg_list <expressions> (58)
        on left: 29 30
        on right: 43 44 45
    arg_list_2 <expressions> (59)
        on left: 31 32
        on right: 30 32
    expression <expression> (60)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 10 11 19 21 22 24 25 26 27 30 32 34 35 36 37 38 39 40 41 42 43 44 46 48 50 54 55 56


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error • ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    3 class_list: class_list • class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' •

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end •

    $default  accept


State 9

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   12 feature: error • ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID • ':' TYPEID ';'
   10        | OBJECTID • ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID • '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 21
    '('  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature •

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   12 feature: error ';' •

    $default  reduce using rule 12 (feature)


State 21

    9 feature: OBJECTID ':' • TYPEID ';'
   10        | OBJECTID ':' • TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 25


State 22

   11 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 13 (formal_list)

    formal_list  go to state 27
    formal       go to state 28


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 29


State 25

    9 feature: OBJECTID ':' TYPEID • ';'
   10        | OBJECTID ':' TYPEID • ASSIGN expression ';'

    ASSIGN  shift, and go to state 30
    ';'     shift, and go to state 31


State 26

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 32


State 27

   11 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expression '}' ';'
   15 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   14 formal_list: formal •

    $default  reduce using rule 14 (formal_list)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 30

   10 feature: OBJECTID ':' TYPEID ASSIGN • expression ';'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 49


State 31

    9 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 9 (feature)


State 32

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 50


State 33

   11 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 51


State 34

   15 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 26

    formal  go to state 52


State 35

   46 expression: IF • expression THEN expression ELSE expression FI
   47           | IF • error FI

    error       shift, and go to state 53
    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 54


State 36

   53 expression: LET • let_expr

    error     shift, and go to state 55
    OBJECTID  shift, and go to state 56

    let_expr  go to state 57


State 37

   50 expression: WHILE • expression LOOP expression POOL
   51           | WHILE • error POOL

    error       shift, and go to state 58
    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 59


State 38

   48 expression: CASE • expression OF case_list ESAC
   49           | CASE • error ESAC

    error       shift, and go to state 60
    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 61


State 39

   33 expression: NEW • TYPEID

    TYPEID  shift, and go to state 62


State 40

   34 expression: ISVOID • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 63


State 41

   60 expression: STR_CONST •

    $default  reduce using rule 60 (expression)


State 42

   58 expression: INT_CONST •

    $default  reduce using rule 58 (expression)


State 43

   59 expression: BOOL_CONST •

    $default  reduce using rule 59 (expression)


State 44

   42 expression: OBJECTID • ASSIGN expression
   45           | OBJECTID • '(' arg_list ')'
   57           | OBJECTID •

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 57 (expression)


State 45

   55 expression: NOT • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 66


State 46

   54 expression: '~' • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 67


State 47

   52 expression: '{' • expression_list '}'

    error       shift, and go to state 68
    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression_list  go to state 69
    expression       go to state 70


State 48

   56 expression: '(' • expression ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 71


State 49

   10 feature: OBJECTID ':' TYPEID ASSIGN expression • ';'
   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '<' expression
   40           | expression • LE expression
   41           | expression • '=' expression
   43           | expression • '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression • '.' OBJECTID '(' arg_list ')'

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 81


State 50

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 51

   11 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 82


State 52

   15 formal_list: formal_list ',' formal •

    $default  reduce using rule 15 (formal_list)


State 53

   47 expression: IF error • FI

    FI  shift, and go to state 83


State 54

   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '<' expression
   40           | expression • LE expression
   41           | expression • '=' expression
   43           | expression • '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression • '.' OBJECTID '(' arg_list ')'
   46           | IF expression • THEN expression ELSE expression FI

    THEN  shift, and go to state 84
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 55

   25 let_expr: error • IN expression

    IN  shift, and go to state 85


State 56

   21 let_expr: OBJECTID • ':' TYPEID IN expression
   22         | OBJECTID • ':' TYPEID ASSIGN expression IN expression
   23         | OBJECTID • ':' TYPEID ',' let_expr
   24         | OBJECTID • ':' TYPEID ASSIGN expression ',' let_expr

    ':'  shift, and go to state 86


State 57

   53 expression: LET let_expr •

    $default  reduce using rule 53 (expression)


State 58

   51 expression: WHILE error • POOL

    POOL  shift, and go to state 87


State 59

   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '<' expression
   40           | expression • LE expression
   41           | expression • '=' expression
   43           | expression • '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression • '.' OBJECTID '(' arg_list ')'
   50           | WHILE expression • LOOP expression POOL

    LOOP  shift, and go to state 88
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 60

   49 expression: CASE error • ESAC

    ESAC  shift, and go to state 89


State 61

   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '<' expression
   40           | expression • LE expression
   41           | expression • '=' expression
   43           | expression • '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression • '.' OBJECTID '(' arg_list ')'
   48           | CASE expression • OF case_list ESAC

    OF   shift, and go to state 90
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 62

   33 expression: NEW TYPEID •

    $default  reduce using rule 33 (expression)


State 63

   34 expression: ISVOID expression •
   35           | expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '<' expression
   40           | expression • LE expression
   41           | expression • '=' expression
   43           | expression • '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression • '.' OBJECTID '(' arg_list ')'

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 34 (expression)


State 64

   42 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 91


State 65

   45 expression: OBJECTID '(' • arg_list ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    $default  reduce using rule 29 (arg_list)

    arg_list    go to state 92
    expression  go to state 93


State 66

   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '<' expression
   40           | expression • LE expression
   41           | expression • '=' expression
   43           | expression • '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression • '.' OBJECTID '(' arg_list ')'
   55           | NOT expression •

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 55 (expression)


State 67

   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '<' expression
   40           | expression • LE expression
   41           | expression • '=' expression
   43           | expression • '@' TYPEID '.' OBJECTID '(' arg_list ')'
   44           | expression • '.' OBJECTID '(' arg_list ')'
   54           | '~' expression •

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 54 (expression)


State 68

   28 expression_list: error • ';'

    ';'  shift, and go to state 94


State 69

   27 expression_list: expression_list • expression ';'
   52 expression: '{' expression_list • '}'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '}'         shift, and go to state 95
    '('         shift, and go to state 48

    expression  go to state 96


State 70
